@@ -346,6 +346,20 @@ public interface PipesFluentPipeline<S, E> {
     public PipesFluentPipeline<S, E> groupBy(final PipeFunction keyFunction, final PipeFunction valueFunction);
 
     /**
+     * Add a GroupByReducePipe to the end of the Pipeline.
+     * Group the objects inputted objects according to a key generated from the object and a value generated from the object.
+     * The grouping map has values that are Lists.
+     * When the pipe has no more incoming objects, apply the reduce function to the keyed Lists.
+     * The sideEffect is only fully available when the pipe is empty.
+     *
+     * @param keyFunction    the function that generates the key from the object
+     * @param valueFunction  the function that generates the value from the function
+     * @param reduceFunction the function that reduces the value lists
+     * @return the extended Pipeline
+     */
+    public PipesFluentPipeline<S, E> groupBy(final PipeFunction keyFunction, final PipeFunction valueFunction, final PipeFunction reduceFunction);
+
+    /**
      * Add a GroupCountPipe or GroupCountFunctionPipe to the end of the Pipeline.
      * A map is maintained of counts.
      * The map keys are determined by the function on the incoming object.
