@@ -31,7 +31,10 @@ h3. Version 1.0 (Pipes -- NOT OFFICIALLY RELEASED YET)
 * Reorganized the @com.tinkerpop.pipes.util@ package
 * Removed the @objectFilter@ step from @PipeFluentPipeline@ as @retain@ and @except@ can be used instead
 * @EmptyIterator@ is now a singleton
+* @ScatterPipe@ now scatters @Map@ objects into @Map.Entry@ streams
 * Added @GroupByPipe@ which groups values under a provided key
+* Added @GroupByReducePipe@ which groups reduced values under a provided key
+
 
 ==<hr/>==
 
